Fixed some typos in How_Sound 	modified:   HOW_S/MICS/mic_types.html

--- a/HOW_S/MICS/mic_types.html
+++ b/HOW_S/MICS/mic_types.html
@@ -199,10 +199,10 @@ its characteristics.</i><br><br>
 
 Any given microphone can be visualized as occupying a place in a three-dimensional 
 space.  As any one of the above gets optimized, it tends to come at the expense of one or 
-both of the qualities listed above.  For example, if you accept a very large microphone 
+both of the other qualities listed above.  For example, if you accept a very large microphone 
 (zero effort at miniaturization) that is sensitive to sound from all directions (no 
 directionality), then you can have very high audio fidelity.  Or maybe you want a 
-very directional microphone.  You can expect that to be large and low audio fidelity
+very directional microphone.  You can expect that to be a large and low fidelity
 microphone.  <br><br>
 
 As effort is taken to optimize one of these three characteristics, and as the other 
@@ -232,16 +232,16 @@ can be accepted.  In live-sound reinforcement miniaturization is especially valu
 other qualities can be sacrificed.  With this type of trade-off in mind, the degree of 
 miniaturization needed will also be influenced by how the microphone needs to appear 
 (or disappear) or be mounted in the room.  If a microphone is going to be hand-held, 
-it should not be disappear too much!  The degree of miniaturization needed is 
-influenced by the overall disappear characteristics of the situation.<br><br>
+it should not be too small!  The degree of miniaturization needed is 
+influenced by the overall characteristics of the situation.<br><br>
 
 The discussion below starts with the largest present-day microphone styles (little 
 need for miniaturization) and proceeds toward the smallest microphone styles.<br><br>
 
 <i><b>Studio-type microphones</b></i><br>
-These are the disappear of a studio-type microphone:<br><bt
+These are the characteristics of a studio-type microphone:<br><bt
   <ul style="list-style-type:disc"><small>
-  <li>High-fidelity with no compromise.</li>
+  <li>High-fidelity, at the sacrifice of miniaturization especially</li>
   <li>Complicated set-up, several parts might mount to one stand.</li>
   <li>The microphone may have several switches or adjustments on it.</li>
   <li>The microphone may use connectors other than XLR type.
@@ -257,7 +257,7 @@ environment (temperature, humidity) and mechanical delicacy.  It will be attende
 by a recording engineer, and used by experienced performers, so careful 
 handling and adroit positioning can be assumed.  Windscreens and mechanical 
 shock-mounting can be dealt with separately from the microphone itself to 
-assure the best possible results overall.</p>
+assure the best possible results in a variety of situations.</p>
 
 <p align="center"><img src="Studio_microphone-642670_960_720.jpg"><br>
 <i>Above:  A studio microphone for a vocalist.  The microphone is 
@@ -407,44 +407,19 @@ These are the characteristics of a handheld microphone:
   <li>Can be fastened to a stand using a <i>microphone clip</i>, then aimed carefully.</li>
   </small></ul><p>
 
-Hand-held microphones need to be conveniently held; hence the typical
+Handheld microphones need to be conveniently held; hence the typical
 size is about that of an ice-cream cone.  Some of them are designed in a 
 stylish way for use on camera in television work.  The size of these 
 stylish microphones has little to do with basic physics and electronics 
 and more to do with fashion.  A few are more stem-like to appear more 
 stylish on camera in some situations.  There is a small market in 
-customizing hand-held microphones so that they coordinate with clothing,
+customizing handheld microphones so that they coordinate with clothing,
 sets, etc.  An inexpensive customization is to fit it with a colorful 
 windsock.  </p>
 
-<p>Most voices sound better, with less popping and hissing, if an additional 
-windsock is fitted over top of the standard screen on the microphone.  
-Video:  <a href="https://www.youtube.com/watch?v=c9ZaQFCxQr8">How to hold a microphone</a>.
-The person holding the microphone should be instructed to hold it by the
-handle and not allow any fingers to touch the wind screen.  Fingers and 
-hands near the capsule block sound.  It is counter-intuitive to most people, 
-but cupping the microphone blocks sound from traveling clear through the 
-windscreen system, thus creating distortion in the sound.  You don't speak through 
-your nose, but pinching off your nose while talking creates an unpleasant 
-sound!  Similarly, blocking the back of a microphone creates a bad sound.  
-That said, some singers still like to cup the microphone.  It can be done 
-in a way that accentuates lower-pitched sounds, but usually at great 
-compromise to overall fidelity.  
 <!-- <font size="2"> More info: <a href=
 "http://www.soundinstruction.net/the-blog/the-microphone-epidemic"
 >Sound Instruction Blog</a></font> -->
-
-<p>A hand-held microphone is likely to be dropped onto hard floors 
-now and then.  It must be able to survive this.  Hand-held microphones also 
-need to have the capsule mechanically-shock-mounted so that handling noise 
-(picking up and setting down the microphone, handing the microphone from 
-one person to another, sound from stroking the microphone wire) is minimized.  A hand-held microphone usually needs a substantial 
-wind screen to mitigate the sound of the wind going past the microphone 
-as it is waved through the air.  (For example when a singer lifts the 
-microphone from near waist height to their mouth to begin singing, the 
-breeze going past the capsule would be substantial save for the wind 
-screen.)  Windscreens having larger and softer and shaggier surfaces are 
-more effective.  </p> 
 
 <p>Most voices sound better, with less popping and hissing, if an additional 
 wind sock is fitted over top of the standard screen on the microphone.  
@@ -457,8 +432,10 @@ windscreen system, thus creating distortion in the sound.  You don't speak throu
 your nose but pinching off your nose while talking creates an unpleasant 
 sound!  Similarly, blocking the back of a microphone creates a bad sound.  
 That said, some singers still like to cup the microphone.  It can be done 
-in a way that accentuates lower-pitched sounds, but usually at great 
-compromise to overall fidelity.  In <a href="https://www.youtube.com/watch?v=9iUjxXJrUcY">this video</a> the speaker is incorrectly holding the microphone from 
+in a way that accentuates mid-pitched sounds, making the vocalist seem 
+closer to the listener, but usually at great compromise to overall fidelity.  
+In <a href="https://www.youtube.com/watch?v=9iUjxXJrUcY">this video</a> the 
+speaker is incorrectly holding the microphone from 
 0:30 to 2:10.  At 2:10 he moves his hand and corrects his hold on the 
 microphone.  The improvement in the audio is easily heard if you are 
 listening with a decent sound system or good headphones.  (A tiny smart-phone 
@@ -470,7 +447,6 @@ a better example video?  Please e-mail me!)
 <!-- <font size="2"> More info: <a href=
 "http://www.soundinstruction.net/the-blog/the-microphone-epidemic"
 >Sound Instruction Blog</a></font> -->
-
 
 <p><b>Hand-held microphones fully occupy one hand of the vocalist which 
 reduces the ability of the vocalist to gesture or manipulate papers</b>.  A 
@@ -484,6 +460,21 @@ stand using a <i>microphone clip</i>.  This frees the vocalist's
 hands and gives the sound engineer an opportunity to aim the microphone 
 carefully to minimize the pickup of feedback and other undesired sources 
 and maximize the pickup of the desired source.</p>
+
+<p>A handheld microphone is likely to be dropped onto hard floors 
+now and then.  It must be able to survive this.  Handheld microphones also 
+need to have the capsule mechanically-shock-mounted so that handling noise 
+(picking up and setting down the microphone, handing the microphone from 
+one person to another, sound from stroking the microphone wire) is minimized.  
+A handheld microphone usually needs a substantial 
+wind screen to mitigate the sound of the wind going past the microphone 
+as it is waved through the air.  (For example when a singer lifts the 
+microphone from near waist height to their mouth to begin singing, the 
+breeze going past the capsule would be substantial save for the windscreen.)  
+Windscreens having larger and softer and shaggier surfaces are 
+more effective.  </p> 
+
+
 
 <p align="center"><a href="AKG_C636_Service_Documentation.pdf"><img width="590" height="548" 
 src="AKG_C636_Service_Documentation.png"></a><br>
@@ -584,7 +575,7 @@ microphone is a poor choice for a musical instrument (guitar, violin, etc.).  </
 
 <p>In a house-of-worship application the main advantage of a lavalier microphone 
 is the freedom of hands and movement that the microphone affords.  Almost any other 
-microphone technique will give better quality sound for the money.  That goes 
+microphone type will give better quality sound for the money.  That goes 
 double for a lavalier used on a person who is singing, since audio fidelity 
 matters more then.  </p>
 
