Posted 323 slides and video for today.  Also fixed a few more typos in How_Sound. 	modified:   HOW_S/MICS/mic_types.html 	modified:   S21/323/323S21DN.HTM

--- a/HOW_S/MICS/mic_types.html
+++ b/HOW_S/MICS/mic_types.html
@@ -608,6 +608,8 @@ Photo:  <a href="https://commons.wikimedia.org/wiki/File:George_Foreman_(2779145
 
 Planned for the future on this page:<br>
 More on head-worn microphones<br>
+2.) Directionality<br>
+3.) Audio Fidelity<br>
 -Capsule technologies<br><br>
 
 Planned for the future on another page:<br>
