Published slides and videos for today in egr  323.  Also removed a "link not working yet" tag in homework file. 	modified:   S21/323/323S21DN.HTM 	modified:   S21/323/323S21PS.HTM

--- a/S21/323/323S21PS.HTM
+++ b/S21/323/323S21PS.HTM
@@ -265,7 +265,7 @@ answer is provided in an online appendix to the textbook.  The
 <a href="https://oup-arc.com/protected/files/content/file/1579527329609-Sedra8e_AppL.pdf"
 >Appendix L</a>.  Also available on Canvas, <a href=
 "https://dordt.instructure.com/files/175429467/download?download_frd=1"
-><font color="0099FF">Appendix L</font></a><sup>9</sup>. (Canvas link not working yet)
+><font color="0099FF">Appendix L</font></a><sup>9</sup>. <!--(Canvas link not working yet)-->
 
                          <BR><BR><TR><TD width="60" valign="top">
 Note 4) 
