Deleted arrata in Sedra_Smith 8th, pages 612-615 	modified:   errata/Sedra_Smith/8th/S_S_8_ER.HTM

--- a/errata/Sedra_Smith/8th/S_S_8_ER.HTM
+++ b/errata/Sedra_Smith/8th/S_S_8_ER.HTM
@@ -14,7 +14,7 @@
 <P align="center"><A HREF="../../../index.html">
                    Professor De Boer</A>'s list of<br><a href="../../../ERRATA/err.htm"> 
                        TEXTBOOK ERRATA</a><br>
-                    (last update 2/03/2021)<br> 
+                    (last update 2/11/2021)<br> 
                                <br>
     <img src="Sedra_Smith_8th_Cover_120x150.jpg" width="120" height="150"
                    alt="Textbook cover thumbnail"><br>
@@ -359,7 +359,7 @@ Page 572, Problem 8.77.</b><br>
    &nbsp; &nbsp; &nbsp; &nbsp; 
    <i><small>(Posted 7/23/20)</small></i><br><br>
    
-                                           <A NAME="P613"></A><b>
+                                       <!--<A NAME="P613"></A><b>
 Pages 613&ndash;615, Example 9.4.</b><br>
    There are lots of errata in this example.<br>
    In the denominator of equation 9.87 change "0.02" to "0.01".<br>
@@ -368,7 +368,9 @@ Pages 613&ndash;615, Example 9.4.</b><br>
    be desirable. Here is a <a href="S_S_8_errata_P613ff.pdf"
    >fully corrected and enhanced version of Example 9.4</a>.     
    &nbsp; &nbsp; &nbsp; &nbsp; 
-   <i><small>(Posted 7/23/2020)</small></i><br><br>
+   <i><small>(Posted 7/23/2020, deleted 2/11/2021.
+   The problem states constant Vov meaning non-equal ID values, thus
+   the example is correct as printed.)</small></i><br><br> -->
    
                                            <A NAME="P731"></A><b>
 Page 731, Figure 10.26 (a).</b><br>
