Added to "mics" in How_Sound  (George_W_max.xcf might have been clobbered with "camo"--not fixing that) 	new file:   HOW_S/MICS/Ear-set_Colors.gif 	new file:   HOW_S/MICS/George_W_camo.png 	new file:   HOW_S/MICS/George_W_camo.xcf 	new file:   HOW_S/MICS/George_W_max.png 	new file:   HOW_S/MICS/George_W_max.xcf 	new file:   HOW_S/MICS/George_W_ugly.png 	new file:   HOW_S/MICS/George_W_ugly.xcf 	modified:   HOW_S/MICS/mic_types.html

--- a/HOW_S/MICS/mic_types.html
+++ b/HOW_S/MICS/mic_types.html
@@ -584,6 +584,9 @@ matters more then.  </p>
 Photo:  <a href="https://commons.wikimedia.org/wiki/File:George_Foreman_(27791452363).jpg">Wikimedia Commons</a></small></p><p><br>
 
 <i><b>Head-worn</i></b><br>
+These are the characteristics of a head-worn microphone (also known as a head-set 
+or ear-set microphone).<br>
+
   <ul style="list-style-type:disc"><small>
   <li>Miniaturization at all costs&mdash;even to the point of fragility.</li>
   <li>Windscreen, if present, is probably minimally effective.</li>
@@ -600,6 +603,84 @@ Photo:  <a href="https://commons.wikimedia.org/wiki/File:George_Foreman_(2779145
   <li>Some have limited ability to handle shouting, loud singing, due to miniaturization,</li>
   <li>Extreme pops and rustling sounds if used as a hand-held (finger-held?) mic.</li>
   </ul> 
+  
+Head-worn microphones are the smallest, most miniaturized microphones used for 
+live-sound reinforcement.  The largest are about a half-inch in diameter (which 
+may look more like one inch in diameter if fitted with a windscreen) and the 
+smallest are about the size of a grain of rice.  The most desirable ones for 
+use in most house-of-worship applications are the size of a pea or smaller.  
+Such small microphones are usually omnidirectional.  They also might not have
+the best audio fidelity, but for voice reinforcement in a live-sound environment 
+they are usually an excellent overall compromise.  They are placed so close to 
+the sound source that directionality usually is not needed, and they can be 
+designed to give good audio fidelity if the design is optimized for the 
+human voice.<br><br>
+
+One of the primary advantages of a head-worn microphone is that it moves 
+with the speaker's head and maintains a very constant distance to the source 
+of the sound.  Although the microphone is in plain sight, the smallest of 
+them are designed to disappear from view at a distance or on video.  To this 
+end, most of the small models are available in a variety of colors to match 
+different skin tones.  Also, to the end of allowing the microphone to disappear 
+from view, the microphone can be worn in such a style as to allow natural 
+shadow lines along the jaw to camouflage the microphone.  To make such 
+camouflage effective the microphone must lay on or very close to the skin 
+(within 1/4 inch or less).  Otherwise shadows and highlights from ordinary 
+lighting give the microphone away, even accentuating its visibility.<br><br>
+
+Sometimes a head-worn microphone is used mainly to fight feedback.  If this is 
+the case, the best place to locate the microphone capsule is about 1/2 inch 
+back from a smile and in line with the speaker's lips.</p>
+
+<p align="center"><img src="George_W_max.png"><br>
+<i>Above:  George Washington is wearing a head-worn microphone in the ideal<br>
+location for picking up the maximum signal practical, thus giving the<br> 
+maximum gain possible before feedback sets in.</i><br><small>
+<a href="https://commons.wikimedia.org/wiki/File:George_Washington_1795.jpg">Wikimedia Commons</a> (marked up)</small><br><p> 
+
+Usually maximization of gain-before-feedback is not needed.  Furthermore, head-worn 
+microphones are typically extremely sensitive to plosives.  If the microphone
+is any closer to the lips than is shown above then distortion of plosives 
+becomes a possibility.  Usually, it is best to position the microphone to 
+achieve more camouflage by mounting it more closely aligned with the lower
+jaw.  There is a natural shadow-line on the front of the jaw.  If the 
+microphone is located as if to extend this shadow-line all the way back to 
+underneath the earlobe, the eye of the viewer will overlook the microphone.  
+If a shirt is worn with an open collar, be sure the microphone is not
+so low on the jaw as to possibly rub on the collar.  Even at this location, 
+the microphone is just a few inches from the speaker's mouth and a good 
+strong signal is available.</p> 
+
+<p align="center"><img src="George_W_camo.png"><br>
+<i>Above:  George Washington is wearing a head-worn microphone in the ideal<br>
+location to camouflage it, giving the microphone the least visibility.<br>
+</i><small><a href="https://commons.wikimedia.org/wiki/File:George_Washington_1795.jpg">Wikimedia Commons</a> (marked up)</small><br><p> 
+
+Sometimes the speaker has difficulty getting the microphone to fit well.  
+In this case the mic may hang in mid-air an inch or more from the speaker's
+face.  Distance between the mic and the face causes the microphone to become 
+distractingly visible against the background.  Ideally the sound technician 
+should work with the speaker to get the microphone placed well so that the 
+speaker is comfortable with the microphone and does not have to fiddle with 
+it during the worship service and so that the microphone is mounted optimally 
+for the needs of the situation.</p>
+
+<p align="center"><img src="George_W_ugly.png"><br>
+<i>Above:  George Washington has been given no help from the sound tech.<br>
+Although this location seems intuitive, it optimizes nothing.<br>
+</i><small><a href="https://commons.wikimedia.org/wiki/File:George_Washington_1795.jpg">Wikimedia Commons</a> (marked up)</small><br><p> 
+
+If you have a choice of colors for the microphone, choosing a color that is 
+slightly darker than the speaker's face will disguise the microphone better 
+than choosing a color that is slightly too light.  This works best because 
+the lighting on the podium will typically cause a few spots of glare or 
+specular reflection from the microphone.  A slightly darker color will offset 
+the glare and give a better overall color match.<br><br>
+
+<p align="center"><img src="Ear-set_Colors.gif"><br>
+<i>Above:  Head-worn microphones are often available in a variety of colors.<br>
+</i><small><a href="https://sep.yimg.com/ay/microphonemadness-store/mm-psm-pro-series-earset-microphone-33.gif">Product photo</a>, MM-PSM Pro Series, fair use.</small><br><p> 
+
 
 
 
@@ -607,7 +688,7 @@ Photo:  <a href="https://commons.wikimedia.org/wiki/File:George_Foreman_(2779145
 <h1>To be continued. . .</h1><p>
 
 Planned for the future on this page:<br>
-More on head-worn microphones<br>
+More on head-worn microphones (fragility, cord dress, interference with jewelry)<br>
 2.) Directionality<br>
 3.) Audio Fidelity<br>
 -Capsule technologies<br><br>
