Published EGR 323PS#4 solutions 	modified:   S21/323/323S21PS.HTM

--- a/S21/323/323S21PS.HTM
+++ b/S21/323/323S21PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 2/15/2021 11:30 pm)
+                              >(Last update: 2/17/2021 8:45 am)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -117,9 +117,9 @@ PS                                                           <BR>
 		>2/12</a>
 
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		&nbsp;<!--<a href=
-        "https://dordt.instructure.com/files/198043785/download?download_frd=1"
-        >1/30</a>
+		<a href=
+        "https://dordt.instructure.com/files/199791817/download?download_frd=1"
+        >2/16</a>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Cascode, Wilson, Widlar current mirrors<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
 		        Introduction to Differential Amplifiers<br>&nbsp;
