--- a/S21/323/323S21DN.HTM
+++ b/S21/323/323S21DN.HTM
@@ -177,18 +177,18 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
 	  "https://dordt.instructure.com/files/141686602/download?download_frd=1"><!-- -->
-	  2/15<!-- --</a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/141845777/download?download_frd=1"><!-- -->
-      2/17<!-- --</a><!-- --><br><!-- --<a href=
+	  2/15<!-- --</a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/199900716/download?download_frd=1"><!-- -->
+      2/17<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/145319441/download?download_frd=1"><!-- -->
       2/19<!-- --</a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
+	  <!-- -->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=01tnidpUync">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><font color=grey>No class, reading day.</font><!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment-->Discussed blackouts in Texas (see video), Test on Friday, <i>R<sub>out</sub></i> loop.<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><font color=grey>Test #1.</font><!--end comment--></td>  
    </TR><!-- Week of 2/21 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
