Added photos of GW Carver to HoW_Sound mic page 	new file:   HOW_S/MICS/GW_Carver.xcf 	new file:   HOW_S/MICS/GW_Carver_mic_bk_camo.jpg 	new file:   HOW_S/MICS/GW_Carver_mic_bk_loud.jpg 	new file:   HOW_S/MICS/GW_Carver_mic_wt_noHelp.jpg 	modified:   HOW_S/MICS/mic_types.html

--- a/HOW_S/MICS/mic_types.html
+++ b/HOW_S/MICS/mic_types.html
@@ -618,12 +618,12 @@ human voice.<br><br>
 
 One of the primary advantages of a head-worn microphone is that it moves 
 with the speaker's head and maintains a very constant distance to the source 
-of the sound.  Although the microphone is in plain sight, the smallest of 
-them are designed to disappear from view at a distance or on video.  To this 
-end, most of the small models are available in a variety of colors to match 
-different skin tones.  Also, to the end of allowing the microphone to disappear 
-from view, the microphone can be worn in such a style as to allow natural 
-shadow lines along the jaw to camouflage the microphone.  To make such 
+of the sound.  Another advantage is that although the microphone is in plain sight, 
+the smallest of them are small enough to disappear from view at a distance or on video
+if they are worn properly.  To this end, most of the small models are available in 
+a variety of colors to match different skin tones.  Also, to the end of allowing 
+the microphone to disappear from view, the microphone can be worn in such a style 
+as to allow natural shadow lines along the jaw to camouflage the microphone.  To make such 
 camouflage effective the microphone must lay on or very close to the skin 
 (within 1/4 inch or less).  Otherwise shadows and highlights from ordinary 
 lighting give the microphone away, even accentuating its visibility.<br><br>
@@ -632,11 +632,14 @@ Sometimes a head-worn microphone is used mainly to fight feedback.  If this is
 the case, the best place to locate the microphone capsule is about 1/2 inch 
 back from a smile and in line with the speaker's lips.</p>
 
-<p align="center"><img src="George_W_max.png"><br>
-<i>Above:  George Washington is wearing a head-worn microphone in the ideal<br>
-location for picking up the maximum signal practical, thus giving the<br> 
+<p align="center"><img src="GW_Carver_mic_bk_Loud.jpg"> <img src="George_W_max.png"><br>
+<i>Above:  George Washington Carver and George Washington are <br>
+each wearing a head-worn microphone in the ideal location for <br>
+picking up the maximum signal practical, thus giving the<br> 
 maximum gain possible before feedback sets in.</i><br><small>
-<a href="https://commons.wikimedia.org/wiki/File:George_Washington_1795.jpg">Wikimedia Commons</a> (marked up)</small><br><p> 
+<a href="https://en.wikipedia.org/wiki/File:George_Washington_Carver-crop.jpg">Wikimedia Commons</a> 
+and <a href="https://commons.wikimedia.org/wiki/File:George_Washington_1795.jpg">Wikimedia Commons</a> 
+(both marked up)</small><br><p> 
 
 Usually maximization of gain-before-feedback is not needed.  Furthermore, head-worn 
 microphones are typically extremely sensitive to plosives.  If the microphone
@@ -651,10 +654,13 @@ so low on the jaw as to possibly rub on the collar.  Even at this location,
 the microphone is just a few inches from the speaker's mouth and a good 
 strong signal is available.</p> 
 
-<p align="center"><img src="George_W_camo.png"><br>
-<i>Above:  George Washington is wearing a head-worn microphone in the ideal<br>
-location to camouflage it, giving the microphone the least visibility.<br>
-</i><small><a href="https://commons.wikimedia.org/wiki/File:George_Washington_1795.jpg">Wikimedia Commons</a> (marked up)</small><br><p> 
+<p align="center"><img src="GW_Carver_mic_bk_camo.jpg"> <img src="George_W_camo.png"><br>
+<i>Above:  George Washington Carver and George Washington are <br>
+each wearing a head-worn microphone in the ideal location to  <br>
+camouflage it, giving the microphone the least visibility.<br>
+</i><small><a href="https://en.wikipedia.org/wiki/File:George_Washington_Carver-crop.jpg">Wikimedia Commons</a> 
+and <a href="https://commons.wikimedia.org/wiki/File:George_Washington_1795.jpg">Wikimedia Commons</a> 
+(both marked up)</small><br><p> 
 
 Sometimes the speaker has difficulty getting the microphone to fit well.  
 In this case the mic may hang in mid-air an inch or more from the speaker's
@@ -665,10 +671,13 @@ speaker is comfortable with the microphone and does not have to fiddle with
 it during the worship service and so that the microphone is mounted optimally 
 for the needs of the situation.</p>
 
-<p align="center"><img src="George_W_ugly.png"><br>
-<i>Above:  George Washington has been given no help from the sound tech.<br>
-Although this location seems intuitive, it optimizes nothing.<br>
-</i><small><a href="https://commons.wikimedia.org/wiki/File:George_Washington_1795.jpg">Wikimedia Commons</a> (marked up)</small><br><p> 
+<p align="center"><img src="GW_Carver_mic_wt_noHelp.jpg"> <img src="George_W_ugly.png"><br>
+<i>Above:  George Washington Carver and George Washington have <br>
+been given no help from the sound tech.  Although this location <br>
+for the microphone seems intuitive, it optimizes nothing.<br>
+</i><small><a href="https://en.wikipedia.org/wiki/File:George_Washington_Carver-crop.jpg">Wikimedia Commons</a> 
+and <a href="https://commons.wikimedia.org/wiki/File:George_Washington_1795.jpg">Wikimedia Commons</a> 
+(both marked up)</small><br><p> 
 
 If you have a choice of colors for the microphone, choosing a color that is 
 slightly darker than the speaker's face will disguise the microphone better 
