Fixed a proken link in the last commit 	modified:   HOW_S/MICS/mic_types.html

--- a/HOW_S/MICS/mic_types.html
+++ b/HOW_S/MICS/mic_types.html
@@ -632,7 +632,7 @@ Sometimes a head-worn microphone is used mainly to fight feedback.  If this is
 the case, the best place to locate the microphone capsule is about 1/2 inch 
 back from a smile and in line with the speaker's lips.</p>
 
-<p align="center"><img src="GW_Carver_mic_bk_Loud.jpg"> <img src="George_W_max.png"><br>
+<p align="center"><img src="GW_Carver_mic_bk_loud.jpg"> <img src="George_W_max.png"><br>
 <i>Above:  George Washington Carver and George Washington are <br>
 each wearing a head-worn microphone in the ideal location for <br>
 picking up the maximum signal practical, thus giving the<br> 
