Added Garth Brooks photo to How_Sound 	new file:   HOW_S/MICS/Garth_Brooks_Crown_CM311A.jpg 	modified:   HOW_S/MICS/mic_types.html

--- a/HOW_S/MICS/mic_types.html
+++ b/HOW_S/MICS/mic_types.html
@@ -614,7 +614,11 @@ the best audio fidelity, but for voice reinforcement in a live-sound environment
 they are usually an excellent overall compromise.  They are placed so close to 
 the sound source that directionality usually is not needed, and they can be 
 designed to give good audio fidelity if the design is optimized for the 
-human voice.<br><br>
+human voice.</p>
+
+<p align="center"><img src="Garth_Brooks_Crown_CM311A.jpg"><br><i>
+Above:  Garth Brooks wears a Crown CM331A head-worn microphone.</i><br>
+<small><a href="https://en.wikipedia.org/wiki/File:Garth_Brooks_at_We_Are_One_(edit).jpg">Wikimedia Commons</a></small></p><p>
 
 One of the primary advantages of a head-worn microphone is that it moves 
 with the speaker's head and maintains a very constant distance to the source 
