Published slides and video of today's class, EGR 323 	modified:   S21/323/323S21DN.HTM

--- a/S21/323/323S21DN.HTM
+++ b/S21/323/323S21DN.HTM
@@ -194,18 +194,18 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/200321879/download?download_frd=1"><!-- -->
-	  2/22<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/141845777/download?download_frd=1"><!-- -->
-      2/24<!-- --</a><!-- --><br><!-- --<a href=
+	  2/22<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/200516795/download?download_frd=1"><!-- -->
+      2/24<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/145319441/download?download_frd=1"><!-- -->
       2/26<!-- --</a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- -->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=dmQVLr0UU9o">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
+	  <!-- -->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=a5yP2p_VlCA">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Discussed chip design &amp; innovation (see video), diff-amp DC offset<!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment-->Diff amp DC offset, BJT diff amp, input bias current, elegant  variations<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 2/28 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
