Posted errata Sedra_Smith/8th/S_S_8_ER Page 665.  Also fixed a typo in HW 	modified:   S21/323/323S21PS.HTM 	modified:   errata/Sedra_Smith/8th/S_S_8_ER.HTM

--- a/errata/Sedra_Smith/8th/S_S_8_ER.HTM
+++ b/errata/Sedra_Smith/8th/S_S_8_ER.HTM
@@ -14,7 +14,7 @@
 <P align="center"><A HREF="../../../index.html">
                    Professor De Boer</A>'s list of<br><a href="../../../ERRATA/err.htm"> 
                        TEXTBOOK ERRATA</a><br>
-                    (last update 2/11/2021)<br> 
+                    (last update 2/27/2021)<br> 
                                <br>
     <img src="Sedra_Smith_8th_Cover_120x150.jpg" width="120" height="150"
                    alt="Textbook cover thumbnail"><br>
@@ -372,6 +372,22 @@ Pages 613&ndash;615, Example 9.4.</b><br>
    The problem states constant Vov meaning non-equal ID values, thus
    the example is correct as printed.)</small></i><br><br> -->
    
+                                          <A NAME="P665_9P72"></A><b>
+Page 665, Problem 9.72.</b><br>
+   The wording of the problem statement in the textbook is ambiguous.  
+   The maximum &Delta;<i>V<sub>t</sub></i> is the maximum difference one could 
+   find between the two transistor's threshold voltages when one transistor 
+   is compared to the other.  Thus the total maximum mismatch of threshold 
+   voltages is just 4 mV, say by making one 2 mV high and the other 2 mV low. 
+   However, the variabilities specified for the <i>W</i>/<i>L</i> ratios and 
+   for the <i>R<sub>D</sub></i> resistors are specified "independently," meaning 
+   relative to their nominal values.  Thus <i>W</i><sub>1</sub>/<i>L</i><sub>1</sub> 
+   could be 1% high while at the same time <i>W</i><sub>2</sub>/<i>L</i><sub>2</sub> 
+   could be 1% low, for a total mismatch of 2%  The same applies to the drain 
+   resistances. <br>
+	  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+      <small><i>(Posted 2/27/2021)           </i></small><br><br>
+
                                            <A NAME="P731"></A><b>
 Page 731, Figure 10.26 (a).</b><br>
    At the drain of <i>Q<sub>S</sub></i> (the blue text) change 
