Fixed:  IN the previous commit I failed to add an edit. 	modified:   errata/Sedra_Smith/8th/S_S_8_ER.HTM

--- a/errata/Sedra_Smith/8th/S_S_8_ER.HTM
+++ b/errata/Sedra_Smith/8th/S_S_8_ER.HTM
@@ -377,7 +377,7 @@ Page 665, Problem 9.72.</b><br>
    The wording of the problem statement in the textbook is ambiguous.  
    The maximum &Delta;<i>V<sub>t</sub></i> is the maximum difference one could 
    find between the two transistor's threshold voltages when one transistor 
-   is compared to the other.  Thus the total maximum mismatch of threshold 
+   is compared to the other.  Thus, the total maximum mismatch of threshold 
    voltages is just 4 mV, say by making one 2 mV high and the other 2 mV low. 
    However, the variabilities specified for the <i>W</i>/<i>L</i> ratios and 
    for the <i>R<sub>D</sub></i> resistors are specified "independently," meaning 
