Added to HoW_S on mic fragility, cord dress, jewelry. 	new file:   HOW_S/MICS/Headworn_cord_dress.jpg 	new file:   HOW_S/MICS/Headworn_cord_dress.xcf 	modified:   HOW_S/MICS/mic_types.html

--- a/HOW_S/MICS/mic_types.html
+++ b/HOW_S/MICS/mic_types.html
@@ -692,7 +692,59 @@ the glare and give a better overall color match.<br><br>
 
 <p align="center"><img src="Ear-set_Colors.gif"><br>
 <i>Above:  Head-worn microphones are often available in a variety of colors.<br>
-</i><small><a href="https://sep.yimg.com/ay/microphonemadness-store/mm-psm-pro-series-earset-microphone-33.gif">Product photo</a>, MM-PSM Pro Series, fair use.</small><br><p> 
+</i><small><a href="https://sep.yimg.com/ay/microphonemadness-store/mm-psm-pro-series-earset-microphone-33.gif">Product photo</a>, MM-PSM Pro Series, fair use.</small><br><p>
+
+Head-worn microphones tend to be fragile.  To make them small and 
+nearly invisible the boom of the microphone and all the other parts are made of 
+the thinnest possible materials.  Whereas a handheld microphone might have a 
+useful life of twenty years or more, most head-worn microphones seem to have a 
+useful life of less than three years.  They are nearly a "consumable" quantity.  
+When budgeting for a head-worn microphone, plan on purchasing and keeping on hand 
+a spare microphone.  The day will inevitably come when you need to make a fast 
+replacement.  <br><br>
+
+Three factors that are unique to head-worn microphones contribute to their fragility.  
+1.)  They get bent.  To provide a comfortable and effective fit it is 
+necessary to bend the boom and ear-loops of the microphone.  Eventually the metals 
+fatigue and crack and then the microphone will need to be replaced.  2.) The wire 
+gets flexed a lot.  The wire that leads from the microphone also gets bent with every 
+turn of the speaker's head.  Considering also that the wire has been made as thin as 
+possible, this wire has a limited lifespan. (Some head-worn microphones come 
+with different options for the wire, a thin option for invisibility and a thicker 
+option for durability.)  3.)  The capsule of a head-worn microphone is unusually 
+vulnerable to any dirt that might enter the front of the microphone.  Especially if the 
+microphone is used in an environment where food may be present there is the possibility 
+that the microphone will be handled by fingers that have food residue on them. This 
+residue can be accidentally introduced into the front of the mic.  Once dirt enters, 
+it muffles the signal.  This type of dirt is difficult to clean out.  Some microphones 
+have specific instructions for cleaning, usually involving rinsing with distilled or 
+deionized water and drying under specific conditions. But these procedures do not 
+always work.  Some dirt is insoluble. <br><br>
+
+The wire that leads from the head-worn microphone to the bodypack tends to pull the 
+microphone out of position.  To prevent this, a clip should be used to fasten the 
+wire to some clothing.  There should be a enough of a loop of wire between the 
+head-worn mic and the clip to accommodate normal movement of the head.  It is best to 
+manipulate the clip to face the wire exiting the clip away from the side of the 
+head where the microphone is located.  This causes the loop of wire to fall on 
+the person's back.  If the wire is faced the other way the loop has an unsightly 
+tendency to fall over the person's shoulder instead.<br><br>
+
+<p align="center"><img src="Headworn_cord_dress.jpg"><br>
+<i>Above:  The wire leading to the microphone should be clipped to clothing.<br>
+As the wire exits the clip on its way to the mic it should face away from the 
+microphone so that the loop of wire falls on the person's back.<br>
+</i><small><a href="https://www.pexels.com/photo/back-view-close-up-portrait-photo-of-man-in-red-plaid-shirt-2445984/"
+>Pexels stock photo</a> marked up</small><br><p>
+
+Jewelry, especially earrings, can occasionally rattle against a head-worn mic 
+causing considerable noise and distraction in the signal.  In certain cases it 
+may be better to resort to a lavalier or stand-mounted microphone.<br><br>
+
+This ends the discussion of miniaturization of microphones.  In order from 
+largest to smallest, studio, stand-mounted, installed, handheld, lavalier, 
+and head-worn microphones have been discussed.  The smaller the microphone is, 
+the harder it is to make it directional and high-fidelity.  
 
 
 
@@ -701,7 +753,7 @@ the glare and give a better overall color match.<br><br>
 <h1>To be continued. . .</h1><p>
 
 Planned for the future on this page:<br>
-More on head-worn microphones (fragility, cord dress, interference with jewelry)<br>
+<br>
 2.) Directionality<br>
 3.) Audio Fidelity<br>
 -Capsule technologies<br><br>
