--- a/S21/323/323S21PS.HTM
+++ b/S21/323/323S21PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 2/27/2021 4:29 pm)
+                              >(Last update: 3/01/2021 11:04 am)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -89,13 +89,13 @@ PS                                                           <BR>
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
         2/26
    <!-- Due -->             </TD><TD align="center" valign="top">
-        3/05<!--<a href=
-		"https://dordt.instructure.com/courses/3110075/assignments/31503103"
-		>3/05</a>-->
+        <a href=
+		"https://dordt.instructure.com/courses/3110075/assignments/31611898"
+		>3/05</a>
 
    <!-- Returned -->        </TD><TD align="center" valign="top">
 		&nbsp;<!--<a href=
-        "https://dordt.instructure.com/files/198043785/download?download_frd=1"
+        "https://dordt.instructure.com/files/20095xxxx/download?download_frd=1"
         >1/30</a>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Transfer functions, Bode plots, HF model <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
@@ -115,9 +115,9 @@ PS                                                           <BR>
 		>2/26</a>
 
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		&nbsp;<!--<a href=
-        "https://dordt.instructure.com/files/198043785/download?download_frd=1"
-        >1/30</a>
+		<a href=
+        "https://dordt.instructure.com/files/200956272/download?download_frd=1"
+        >3/01</a>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Current-source load for diff amp, BJT    <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
 		        diff amp, CMRR, 2nd-order effects, DC    <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
