--- a/S21/323/323S21DN.HTM
+++ b/S21/323/323S21DN.HTM
@@ -209,19 +209,19 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Friday    -->&nbsp;<!--start comment-->Probs. 9.61, (9.28 video only), Introduction to <b>Ch 10</b>, Freq. Response<!--end comment--></td>  
    </TR><!-- Week of 2/28 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/141686602/download?download_frd=1"><!-- -->
-	  3/01<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/201118386/download?download_frd=1"><!-- -->
+	  3/01<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/141845777/download?download_frd=1"><!-- -->
       3/03<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/145319441/download?download_frd=1"><!-- -->
       3/05<!-- --</a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
-	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
+	  <!-- -->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=0RbPPefggiI">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment-->Def'n Transfer Function, how to find TF via diff. Eq, via phasors<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 3/07 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
